Update boolean variable name

--- a/notebooks/python/test-parsing-diff.ipynb
+++ b/notebooks/python/test-parsing-diff.ipynb
@@ -1,33 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "53b919eeb97e19fb",
    "metadata": {},
-   "source": [
-    "Initialize parser"
-   ]
+   "cell_type": "markdown",
+   "source": "Initialize parser",
+   "id": "c6b755194e4976c8"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "becde4d357d08b59",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:06:16.904277494Z",
-     "start_time": "2026-01-03T10:06:16.884674611Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/home/bazzite/github/aldoKelvianto/evaluating-local-model-for-android/.venv/lib/python3.14/site-packages/tree_sitter/__init__.py:36: FutureWarning: Language(path, name) is deprecated. Use Language(ptr, name) instead.\n",
-      "  warn(\"{} is deprecated. Use {} instead.\".format(old, new), FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "from tree_sitter import Language, Parser\n",
     "from pathlib import Path\n",
@@ -45,46 +28,20 @@
     "\n",
     "deletions = []\n",
     "additions = []"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74d3beab1d4e396c",
-   "metadata": {},
-   "source": [
-    "Parsing Diff #1 - Material"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "initial_id",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:06:16.959705479Z",
-     "start_time": "2026-01-03T10:06:16.906307992Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deletions:\n",
-      "colors: TopAppBarColors = TopAppBarDefaults.centerAlignedTopAppBarColors(),\n",
-      "colors = TopAppBarDefaults.centerAlignedTopAppBarColors(\n",
-      "\n",
-      "Additions:\n",
-      "colors: TopAppBarColors = TopAppBarDefaults.topAppBarColors(),\n",
-      "colors = TopAppBarDefaults.topAppBarColors(\n",
-      "has error: False\n",
-      "s-exp: (source (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context) (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context))\n",
-      "contains_all_deletions: True\n",
-      "contains_all_additions: True\n"
-     ]
-    }
    ],
+   "id": "245b4bd1e01bb2c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Parsing Diff #1 - Material",
+   "id": "38d310926065a300"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "diff_1 = Path(\"../../resources/golden-reference/claude-sonnet-4_5/test4-deprecated-material.diff\").read_text()\n",
     "\n",
@@ -109,7 +66,7 @@
     "for a in additions:\n",
     "    print(a)\n",
     "\n",
-    "print(f\"has error: {tree.root_node.has_error}\")\n",
+    "print(f\"correct syntax: {tree.root_node.has_error}\")\n",
     "print(f\"s-exp: {tree.root_node.sexp()}\")\n",
     "\n",
     "required_deletions = [\n",
@@ -137,47 +94,20 @@
     "\n",
     "deletions.clear()\n",
     "additions.clear()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec2952bfd07b3aec",
-   "metadata": {},
-   "source": [
-    "Parsing Diff #2 - Plugin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1a0bd206e2fb9921",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:06:17.020844636Z",
-     "start_time": "2026-01-03T10:06:16.961100408Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deletions:\n",
-      "import org.jetbrains.kotlin.gradle.dsl.KotlinJvmProjectExtension\n",
-      "import org.jetbrains.kotlin.gradle.dsl.KotlinTopLevelExtension\n",
-      "private inline fun <reified T : KotlinTopLevelExtension> Project.configureKotlin() = configure<T> {\n",
-      "\n",
-      "Additions:\n",
-      "import org.jetbrains.kotlin.gradle.dsl.KotlinBaseExtension\n",
-      "import org.jetbrains.kotlin.gradle.dsl.KotlinJvmProjectExtension\n",
-      "private inline fun <reified T : KotlinBaseExtension> Project.configureKotlin() = configure<T> {\n",
-      "has error: False\n",
-      "s-exp: (source (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (deletion) (addition) (addition) (context) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context))\n",
-      "contains_all_deletions: True\n",
-      "contains_all_additions: True\n"
-     ]
-    }
    ],
+   "id": "9edd48738278aafb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Parsing Diff #2 - Plugin",
+   "id": "5565b19f98d3562"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "diff_2 = Path(\"../../resources/golden-reference/claude-sonnet-4_5/test5-deprecated-plugin.diff\").read_text()\n",
     "\n",
@@ -223,31 +153,32 @@
     "    for req in required_additions\n",
     ")\n",
     "\n",
-    "print(f\"has error: {tree.root_node.has_error}\")\n",
+    "print(f\"correct syntax: {tree.root_node.has_error}\")\n",
     "print(f\"s-exp: {tree.root_node.sexp()}\")\n",
     "\n",
     "print(\"contains_all_deletions:\", contains_all_deletions)\n",
     "print(\"contains_all_additions:\", contains_all_additions)"
-   ]
+   ],
+   "id": "779ff423e123148e"
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
