--- a/notebooks/python/test-parsing-kt.ipynb
+++ b/notebooks/python/test-parsing-kt.ipynb
@@ -1,25 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "1b03dc34ceb2a1b3",
    "metadata": {},
-   "source": [
-    "Initialize parser"
-   ]
+   "cell_type": "markdown",
+   "source": "Initialize parser",
+   "id": "945546552b14722b"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "26e1b200132bd07e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:06:13.984969651Z",
-     "start_time": "2026-01-03T10:06:13.969961712Z"
-    },
-    "collapsed": true
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from tree_sitter import Language, Parser\n",
     "from pathlib import Path\n",
@@ -29,68 +20,26 @@
     "\n",
     "parser = Parser()\n",
     "parser.set_language(KOTLIN_LANGUAGE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7770c8576818c2ad",
-   "metadata": {},
-   "source": [
-    "Parsing Kt #1 - Preview"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "5f3947712a616c81",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:06:14.059029543Z",
-     "start_time": "2026-01-03T10:06:13.985898458Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Function: InterestsCardPreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardLongNamePreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardLongDescriptionPreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardWithEmptyDescriptionPreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardSelectedPreview\n",
-      "  Annotations (on function):\n",
-      "    @Composable\n",
-      "    @Preview\n",
-      "\n",
-      "Valid Kotlin: True\n",
-      "Total functions found: 5\n",
-      "Total functions with @Preview and @Composable: 5\n"
-     ]
-    }
    ],
+   "id": "cfa7f0e88ccca11"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Parsing Kt #1 - Preview",
+   "id": "a5d9520fb69f543a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "kt_1 = Path(\"../../resources/golden-reference/original/test1-preview.kt\").read_bytes()\n",
     "tree = parser.parse(kt_1)\n",
     "root_node = tree.root_node\n",
     "\n",
-    "is_valid_kotlin = not root_node.has_error\n",
+    "correct_syntax = not root_node.has_error\n",
     "\n",
     "query = KOTLIN_LANGUAGE.query(\"\"\"\n",
     "    ; Pattern 1: Standard declarations\n",
@@ -158,50 +107,30 @@
     "       any('@Composable' in ann for ann in func['annotations'])\n",
     ")\n",
     "\n",
-    "print(f\"Valid Kotlin: {is_valid_kotlin}\")\n",
+    "print(f\"Valid Kotlin: {correct_syntax}\")\n",
     "print(f\"Total functions found: {len(all_functions)}\")\n",
     "print(f\"Total functions with @Preview and @Composable: {total_preview_composable_functions}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2013c3a3dcdc04fd",
-   "metadata": {},
-   "source": [
-    "Parsing Kt #2 - Unit Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "1a0bd206e2fb9921",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:06:14.131924927Z",
-     "start_time": "2026-01-03T10:06:14.060821905Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Analysis ---\n",
-      "Valid Kotlin: True\n",
-      "Has All Required Imports: True\n",
-      "Has GetFollowableTopicsUseCase Constructor: True\n",
-      "Functions with @Test annotation: 2\n",
-      "Has Exactly 2 Test Functions: True\n"
-     ]
-    }
    ],
+   "id": "d15ef7b36d79ee34"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Parsing Kt #2 - Unit Test",
+   "id": "73599b339833591"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "kt_2 = Path(\"../../resources/golden-reference/original/test2-unit-test.kt\").read_bytes()\n",
     "tree = parser.parse(kt_2)\n",
     "\n",
     "root_node = tree.root_node\n",
     "\n",
-    "is_valid_kotlin = not root_node.has_error\n",
+    "correct_syntax = not root_node.has_error\n",
     "\n",
     "query = KOTLIN_LANGUAGE.query(\"\"\"\n",
     "    ; 1. Capture all import paths\n",
@@ -280,54 +209,31 @@
     "has_exactly_three_test_functions = (test_functions_count == 2)\n",
     "\n",
     "print(f\"--- Analysis ---\")\n",
-    "print(f\"Valid Kotlin: {is_valid_kotlin}\")\n",
+    "print(f\"Valid Kotlin: {correct_syntax}\")\n",
     "print(f\"Has All Required Imports: {has_all_required_imports}\")\n",
     "print(f\"Has GetFollowableTopicsUseCase Constructor: {has_use_case_constructor}\")\n",
     "print(f\"Functions with @Test annotation: {test_functions_count}\")\n",
     "print(f\"Has Exactly 2 Test Functions: {has_exactly_three_test_functions}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea0e090a9739c0e7",
-   "metadata": {},
-   "source": [
-    "Parsing Kt #3 - Instrumentation Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "82603b1ae0afe301",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:06:14.191412245Z",
-     "start_time": "2026-01-03T10:06:14.134224869Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Analysis ---\n",
-      "Imports TopicEntity: True\n",
-      "Inherits from DatabaseTest: True\n",
-      "Functions with @Test: 7\n",
-      "\n",
-      "--- Details ---\n",
-      "Imports: ['com.google.samples.apps.nowinandroid.core.database.model.TopicEntity', 'kotlinx.coroutines.flow.first', 'kotlinx.coroutines.test.runTest', 'org.junit.Test', 'kotlin.test.assertEquals']\n",
-      "Classes: [{'name': 'TopicDaoTest', 'parents': ['DatabaseTest']}]\n",
-      "Test functions: ['getTopics', 'getTopic', 'getTopics_oneOff', 'getTopics_byId', 'insertTopic_newEntryIsIgnoredIfAlreadyExists', 'upsertTopic_existingEntryIsUpdated', 'deleteTopics_byId_existingEntriesAreDeleted']\n"
-     ]
-    }
    ],
+   "id": "a950348103e6749d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Parsing Kt #3 - Instrumentation Test",
+   "id": "d091dcd0ab05790"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "kt_3 = Path(\"../../resources/golden-reference/original/test3-instrumentation-test.kt\").read_bytes()\n",
     "tree = parser.parse(kt_3)\n",
     "root_node = tree.root_node\n",
     "\n",
-    "is_valid_kotlin = not root_node.has_error\n",
+    "correct_syntax = not root_node.has_error\n",
     "\n",
     "query = KOTLIN_LANGUAGE.query(\"\"\"\n",
     "    (import_header (identifier) @import_path)\n",
@@ -412,26 +318,27 @@
     "print(f\"Imports: {results['imports']}\")\n",
     "print(f\"Classes: {results['classes']}\")\n",
     "print(f\"Test functions: {test_functions}\")"
-   ]
+   ],
+   "id": "6158abbc299580aa"
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
